...
    onAuthenticateClick: () -> Unit,
    onOpenPayUrl: (String) -> Unit,
) {
    var payUrl by remember { mutableStateOf("") }
    Box {
        Column(modifier = Modifier.fillMaxSize()) {
            WCTopAppBarLegacy(titleText = "Chain selection")
            ChainsList(
                chains = chains,
                modifier = Modifier
                    .weight(1f)
                    .padding(horizontal = 16.dp),
                onChainClick,
            )
            BlueButton(
                text = "Connect via AppKit",
                onClick = onConnectClick,
                modifier = Modifier
                    .padding(vertical = 10.dp)
                    .fillMaxWidth()
                    .height(50.dp)
                    .padding(horizontal = 16.dp),
...
