...
    linkMode = "https://appkit-lab.reown.com/wallet_debug",
    true
)

private val SampleWalletInternal = Wallet(
    id = "SampleWalletInternal",
    name = "Android Sample Internal",
    homePage = "https://walletconnect.com",
    imageUrl = "https://raw.githubusercontent.com/WalletConnect/WalletConnectKotlinV2/develop/sample/wallet/src/main/res/drawable-xxxhdpi/wc_icon.png",
    order = "2",
    mobileLink = "kotlin-web3wallet://",
    playStore = null,
    webAppLink = null,
...
