...
}

private val ethToken = Modal.Model.Token(name = "Ether", symbol = "ETH", decimal = 18)

internal val ethereumChain: Modal.Model.Chain
    get() = Modal.Model.Chain(
        chainName = "Ethereum",
        chainNamespace = "eip155",
        chainReference = "1",
        requiredMethods = listOf(),
        optionalMethods = listOf(),
        events = listOf(),
        token = ethToken,
...
