<resources>
    <string name="app_name">AppKit Lab</string>
    <string name="connect_wallet">Connect Wallet</string>
</resources>