...
                    color = WCTheme.colors.borderSecondary,
                    shape = WCTheme.borderRadius.shapeLarge
                )
                .then(
                    if (!buttonsDisabled) Modifier.clickable { onReject() } else Modifier
                )
                .testTag("wallet-request-reject"),
            contentAlignment = Alignment.Center
        ) {
            if (isLoadingReject) {
                CircularProgressIndicator(
                    modifier = Modifier.size(WCTheme.spacing.spacing5),
                    strokeWidth = WCTheme.spacing.spacing05,
...
                    if (approveEnabled && !buttonsDisabled) {
                        Modifier.clickable { onApprove() }
                    } else {
                        Modifier
                    }
                )
                .testTag("wallet-request-approve"),
            contentAlignment = Alignment.Center
        ) {
            if (isLoadingApprove) {
                CircularProgressIndicator(
                    modifier = Modifier.size(WCTheme.spacing.spacing5),
                    strokeWidth = WCTheme.spacing.spacing05,
...
