...
            headerStyle = AppKitTheme.typo.paragraph500
            description = "Accept connection request in your wallet app"
            descriptionStyle = AppKitTheme.typo.small400.copy(color = AppKitTheme.colors.foreground.color200)
        }

        RedirectState.Reject -> {
            header = "Connection declined"
            description = "Connection can be declined if a previous request is still active"
            headerStyle = AppKitTheme.typo.paragraph400.copy(AppKitTheme.colors.error)
            descriptionStyle = AppKitTheme.typo.small400.copy(color = AppKitTheme.colors.foreground.color200)
        }

        RedirectState.Expired -> {
...
