...
}

@Composable
fun TransactionBadge(transaction: Pos.Transaction, modifier: Modifier = Modifier) {
    if (transaction.isRefunded) {
        BadgePill(
            label = "Refunded",
            bgColor = WCTheme.colors.foregroundSecondary,
            textColor = WCTheme.colors.textSecondary,
            modifier = modifier
        )
    } else {
        StatusBadge(status = transaction.status, modifier = modifier)
...
