...
                modifier = Modifier
                    .fillMaxWidth()
                    .weight(1f)
            )
            ActionButton(
                iconRes = R.drawable.ic_clock,
                label = "Activity",
                onClick = { viewModel.navigateToTransactionHistory() },
                modifier = Modifier
                    .fillMaxWidth()
                    .weight(1f)
            )
            ActionButton(
...
