...
        ),
        namespaces = mapOf(
            "eip155" to Wallet.Model.Namespace.Session(
                chains = listOf("eip155:1", "eip155:137", "eip155:56"),
                methods = listOf(
                    "eth_sendTransaction",
                    "personal_sign",
                    "eth_accounts",
                    "eth_requestAccounts",
                    "eth_call",
                    "eth_getBalance",
                    "eth_sendRawTransaction",
                    "eth_sign",
...
