...
        onDismissRequest = onClose,
        text = {
            if (message.isNotEmpty()) {
                Text(
                    text = message,
                    modifier = Modifier.semantics {
                        contentDescription = "result_message"
                    }
                )
            }
            if (error.isNotEmpty()) {
                Text(
                    text = error,
                    modifier = Modifier.semantics {
                        contentDescription = "result_error"
                    }
                )
            }
        },
        confirmButton = {
            Button(
...
