appId: com.reown.sample.dapp.internal
name: Kotlin Dapp to Kotlin Wallet Connection Rejected
---
- clearState
- launchApp:
    appId: "com.reown.sample.wallet.internal"
- startRecording: "Native Connection Rejected"
- launchApp:
    appId: "com.reown.sample.dapp.internal"
    permissions:
      all: allow
# Press NOT NOW in case the Enabling testing features modal appears
- runFlow:
    when:
      visible: "NOT NOW"
    commands:
      - tapOn: "NOT NOW"
- extendedWaitUntil:
    visible:
      text: "Chain selection"
    timeout: 30000
- extendedWaitUntil:
    visible:
      text: "Ethereum"
    timeout: 15000
- tapOn: "Ethereum"
- tapOn: "Connect via AppKit"
- extendedWaitUntil:
    visible:
      text: "All wallets"
    timeout: 15000
- tapOn: "All wallets"
- extendedWaitUntil:
    visible:
      text: "Android Sample Internal"
    timeout: 30000
- tapOn: "Android Sample Internal"
- extendedWaitUntil:
    visible:
      id: "wallet-request-reject"
    timeout: 30000
- tapOn:
    id: "wallet-request-reject"
- extendedWaitUntil:
    visible:
      text: "Connection declined"
    timeout: 15000
- assertVisible: "Connection declined"
- stopRecording
