appId: com.reown.sample.wallet.internal
name: AppKit Web to Kotlin Wallet Connection Confirmed
---
- openLink:
    link: https://appkit-lab.reown.com/library/wagmi/
    browser: true
- startRecording: "Web to Native Connection Confirmed"
- tapOn: "Connect Wallet"
- tapOn: "Kotlin Sample Wallet Kotlin Sample Wallet"
- extendedWaitUntil:
    visible:
      id: "wallet-request-approve"
    timeout: 30000
- tapOn:
    id: "wallet-request-approve"
- back
- back
- assertVisible: "AppKit Interactions"
- stopRecording