appId: com.reown.sample.wallet.internal
name: AppKit Web to Kotlin Wallet Connection Rejected
---
- openLink:
    link: https://appkit-lab.reown.com/library/wagmi/
    browser: true
- startRecording: "Web to Native Connection Rejected"
- tapOn: "Connect Wallet"
- tapOn: "Kotlin Sample Wallet Kotlin Sample Wallet"
- extendedWaitUntil:
    visible:
      id: "wallet-request-reject"
    timeout: 30000
- tapOn:
    id: "wallet-request-reject"
- back
- back
- assertVisible: "Connection declined"
- stopRecording