appId: com.reown.sample.dapp.internal
name: Kotlin Dapp to Kotlin Wallet personal_sign Confirmed
---
- launchApp:
    permissions:
      all: allow
- startRecording: "Native personal_sign Confirmed"
# Press NOT NOW in case the Enabling testing features modal appears
- runFlow:
    when:
      visible: "NOT NOW"
    commands:
      - tapOn: "NOT NOW"
- extendedWaitUntil:
    visible:
      text: "Ethereum_Main"
    timeout: 15000
- tapOn: "Ethereum_Main"
- tapOn: "personal_sign"
- extendedWaitUntil:
    visible:
      id: "wallet-request-approve"
    timeout: 30000
- tapOn:
    id: "wallet-request-approve"
- extendedWaitUntil:
    visible:
      text: "result_message"
    timeout: 15000
- assertVisible: result_message
- stopRecording
